<resources>
    <string name="app_name">Nanna Arogya</string>
    <string name="sign_in_or_register"> <u>Sign In/Register</u> </string>
    <string name="save">Save</string>
    <string name="enter_display_name">Enter Display Name</string>
    <string name="tap_on_camera_to_choose_profile_picture">Tap on the camera to choose a profile picture</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_login">Already Have an account? Login</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="medicines">Medicines</string>
    <string name="tips">Tips</string>
    <string name="you_are_overweight">YOU ARE OVERWEIGHT !!</string>
    <string name="over_weight">* Reduce sugar \n * No white carbs \n * Manage stress \n * Eat lean protein\n * Manage stress \n * drink 2-3 litres of water everyday \n * drink fresh lemon extract in warm water\n * Get proper sleep of Atleast 6 to 8 hours\n * Workout regularly, include cardio workouts more\n</string>
    <string name="you_are_underweight">YOU ARE UNDERWEIGHT!!</string>
    <string name="under_weight">*Eat and drink nutrient rich foods, smoothies and juices regularly \n *Do yoga regularly \n *Have proper mental diet\n</string>
    <string name="congratulations_you_have_normal_body_weight">Congratulations you have normal body weight.</string>
    <string name="do_physical_and_mental_exercises_regularly_and_stay_healthy_n">Do physical and mental exercises regularly and stay healthy\n</string>
    <string name="reports_upload">Reports Upload</string>
    <string name="height_meters">Height (cm):</string>
    <string name="weight_kg">Weight (kg):</string>
    <string name="blood_group">Blood Group:</string>
    <string name="blood_sugar_level">Blood Sugar level:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="file_name">File Name</string>
    <string name="upload">Upload</string>
    <string name="conform_password">Confirm Password</string>
    <string name="about_us">ABOUT US</string>
    <string name="about_us_text">Smart phone has been widely used as an ideal assistant for health and fitness.we proposed a mobile application for health monitoring.Generally in critical case patients are supposed to be monitored continuously for their heart rate, blood pressure ,blood sugar level etc.In earlier cases doctors need to be present physically and the entire history cannot be displayed hence we are using a idea for continuous monitoring patients health conditions.This applications aim is to analyze users health condition and gives some suggestions and instruction to user for maintaining and improving his or her health.The app stores the data day-wise and must present the trend in increase/decrease on the levels on a weekly,monthly,yearly basis (average of week,month and year).You can add a date or pick the date.The app is also concerned of your calorie intake,if intake is not consistent then it suggests and guide you to normalize the calorie intake.</string>
    <string name="bmi">BMI</string>
    <string name="bmr">BMR</string>
    <string name="daily_calories">Daily Calories</string>
    <string name="body_water">Body Water</string>
    <string name="blood_volume">Blood Volume</string>
    <string name="age">Age:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="bmr_">BMR:</string>
    <string name="dialy_calories">Dialy Calories:</string>
    <string name="enter_medicine_name">Enter Medicine Name</string>
    <string name="set">SET</string>
    <string name="cancel">CANCEL</string>
    <string name="dont_forget">Dont forget!!!</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="click_here_to_resend"><u>Click here send Verification mail</u></string>
    <string name="title_activity_maps">Map</string>
    <string name="we_are_here_to_help_you">We are here to help you</string>
</resources>
