<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:text="@string/tap_on_camera_to_choose_profile_picture"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profile_imageView_picture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon_camera"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickCamera"
            android:layout_margin="20dp"/>
        <ProgressBar
            android:visibility="gone"
            android:id="@+id/profile_ProgressBar"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" />

    </RelativeLayout>


    <EditText
        android:id="@+id/profile_EditText_profileName"
        android:layout_gravity="center_horizontal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/first_name"/>
    <EditText
        android:id="@+id/profile_EditText_LastName"
        android:layout_gravity="center_horizontal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/last_name"/>

    <EditText
        android:id="@+id/profile_EditText_PhoneNumber"
        android:layout_gravity="center_horizontal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:hint="@string/phone_number"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:onClick="onClickSave"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/save"/>
</LinearLayout>