<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_margin="20dp"
        android:text="@string/you_are_underweight"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/tips"/>
    <TextView
        android:id="@+id/dialog_Text"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/under_weight"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/dialog_buttonOkk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="OK"/>

</LinearLayout>